--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://http://3.80.39.146:8081/repository/tesla-fe-snapshots/</url>
+	      <url>http://3.80.39.146:8081/repository/tesla-fe-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
